--- a/index.html
+++ b/index.html
@@ -6,67 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wewelwala Holdings</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap.css">
+
 </head>
 
 <body>
-    <center>
-        <table>
-            <th>
-                <img src="Logo.png" width="50px" height="50px">
-            </th>
-            <th>
-                Businesses Holding Company
-                <br>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand"><img src="Logo.png" class="logo"></a>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
 
-            </th>
-        </table>
-        <hr>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Holdings</li>
-            <li class="e1">Contact Us</li>
-            <li class="e1">Ratings</li>
-        </ul>
-        <table>
-            <th class="e2">
-                "Empowering Futures <br>
-                Building Wealth <br>
-                One Investment at a Time."
-            </th>
-            <th>
-                <img class="e3" src="img2.jpg">
-            </th>
-        </table>
-        <br><br>
-        <table>
-            <tr>
-                <td>
-                    <img class="e4" src="img3.jpg">
-                </td>
-                <td>
-                    <img class="e4" src="img4.jpg">
-                </td>
-                <td>
-                    <img class="e4" src="img5.jpg">
-                </td>
-            </tr>
-        </table>
-        <table>
-            <tr class="e5">
-                <td>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laborum voluptatem fugit amet quos earum aliquam esse pariatur debitis. Repudiandae blanditiis repellat a. Ea corrupti et consectetur illum voluptates qui.
-                </td>
-                <td>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laborum voluptatem fugit amet quos earum aliquam esse pariatur debitis. Repudiandae blanditiis repellat a. Ea corrupti et consectetur illum voluptates qui.
-                </td>
-                <td>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laborum voluptatem fugit amet quos earum aliquam esse pariatur debitis. Repudiandae blanditiis repellat a. Ea corrupti et consectetur illum voluptates qui.
-                </td>
-            </tr>
+    <ul>
+        <li>Home</li>
+        <li><a class="nav" href="about.html"></a>About</li>
+        <li><a class="nav" href="holdings.html"></a>Holdings</li>
+        <li class="e1">Contact Us</li>
+        <li class="e1">Ratings</li>
+    </ul>
+    <br>
+    <table>
+        <th class="e2">
+            "Empowering Futures <br>
+            Building Wealth <br>
+            One Investment at a Time."
+        </th>
+        <th>
+            <img class="e3" src="img2.jpg">
+        </th>
+    </table>
+    <br><br>
+    <table>
+        <tr>
+            <td>
+                <div class="card m-5" style="width: 18rem;">
+                    <img src="img3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="card m-5" style="width: 18rem;">
+                    <img src="img4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="card m-5" style="width: 18rem;">
+                    <img src="img5.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="card m-5" style="width: 18rem;">
+                    <img src="img2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </table>
 
-        </table>
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bf2tFixliMA?si=eiggPSMPjCcw_ZXZ"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <br>
 
 
 </body>
